--- a/blog/first-post.mdx
+++ b/blog/first-post.mdx
@@ -2,6 +2,7 @@
 title: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 date: "2020-01-01"
 slug: "first-post"
+length: "medium"
 ---
 
 
