--- a/blog/first-post.mdx
+++ b/blog/first-post.mdx
@@ -2,7 +2,7 @@
 title: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 date: "2020-01-01"
 slug: "first-post"
-length: "medium"
+tag: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus massa vel urna interdum, ac pulvinar nisl porta."
 ---
 
 
