Add quotes too articles

--- a/blog/first-post.mdx
+++ b/blog/first-post.mdx
@@ -3,6 +3,9 @@ title: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 date: "2020-01-01"
 slug: "first-post"
 tag: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus massa vel urna interdum, ac pulvinar nisl porta."
+quote: "test test testity test"
+attribution: "Testy McTesterson"
+citation: "All Testy on the Testern Test"
 ---
 
 
