--- a/blog/second-post.mdx
+++ b/blog/second-post.mdx
@@ -3,6 +3,9 @@ title: "Second post title second post title second post."
 date: "2022-04-07"
 slug: "second-post"
 tag: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus massa vel urna interdum, ac pulvinar nisl porta."
+quote: "This is not a test. I repeat this is not a test"
+attribution: "Tester Test"
+citation: "Testing Stuff 101"
 ---
 
 
