--- a/blog/first-post.mdx
+++ b/blog/first-post.mdx
@@ -12,6 +12,13 @@ import { WinLossBarchart } from "../src/components/viz/WinLossBargraph";
 
 <main style={{'textAlign': 'center'}}>
 # Visualizing Wins and Loss
-<WinLossBarchart data={[{wins: 12, losses: 5},{wins: 14, losses: 1},{wins: 6, losses: 14},{wins: 9, losses: 10},{wins: 10, losses: 10}]}/>
+<WinLossBarchart 
+    data={[{wins: 12, losses: 5},{wins: 14, losses: 1},{wins: 6, losses: 14},{wins: 9, losses: 10},{wins: 10, losses: 10}]}
+    winColour="#005AB5"
+    lossColour="#DC3220"
+    barHeight={20}
+    width={500}
+    spacing={2}
+/>
 
 </main>
