--- a/blog/win-loss-bargraph-nhl.mdx
+++ b/blog/win-loss-bargraph-nhl.mdx
@@ -8,21 +8,9 @@ attribution: "Jack Hughes"
 citation: ""
 ---
 
-import { WinLossBarchart } from "../src/components/viz/WinLossBargraph";
+import { NhlTeamWinLossBargraph } from "../src/components/viz/NhlTeamWinLossBargraph";
 
 <main style={{ textAlign: "center" }}>
   # Wins and Loss in the NHL
-  <WinLossBarchart
-    data={[
-      { wins: 12, losses: 5 },
-      { wins: 15, losses: 1 },
-      { wins: 6, losses: 14 },
-      { wins: 9, losses: 10 },
-      { wins: 10, losses: 10 },
-    ]}
-    winColour="#005AB5"
-    lossColour="#DC3220"
-    barHeight={3}
-    axisLinesInterval={5}
-  />
+  <NhlTeamWinLossBargraph />
 </main>
