Add titles too bars

--- a/blog/win-loss-bargraph-nhl.mdx
+++ b/blog/win-loss-bargraph-nhl.mdx
@@ -11,6 +11,6 @@ citation: ""
 import { NhlTeamWinLossBargraph } from "../src/components/viz/NhlTeamWinLossBargraph";
 
 <main style={{ textAlign: "center" }}>
-  # Wins and Loss in the NHL
+  # Wins and Losses in the NHL
   <NhlTeamWinLossBargraph />
 </main>
