Add filtering by division

--- a/blog/win-loss-bargraph-nhl.mdx
+++ b/blog/win-loss-bargraph-nhl.mdx
@@ -1,5 +1,5 @@
 ---
-title: "A Win/Loss Bargraph for the NHL"
+title: "Visualizing Wins and Losses in the NHL"
 date: "2020-11-21"
 slug: "win-loss-bargraph-nhl"
 tag: "A simple win/loss bargraph visualization of NHL wins and losses."
@@ -11,6 +11,6 @@ citation: ""
 import { NhlTeamWinLossBargraph } from "../src/components/viz/NhlTeamWinLossBargraph";
 
 <main style={{ textAlign: "center" }}>
-  # Wins and Losses in the NHL
+  # Visualizing Wins and Losses in the NHL
   <NhlTeamWinLossBargraph />
 </main>
