Correct spiral direction, add feint axis

--- a/blog/spiral.mdx
+++ b/blog/spiral.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Spiraling"
+title: "The Archimedian Spiral"
 date: "2020-11-23"
 slug: "spiral"
 tag: "A place to draw spirals"
@@ -7,6 +7,8 @@ quote: "Every year we pass the pre-anniversary of our death, but we don't even k
 attribution: "Matt Spencer"
 citation: "Avenue 5"
 ---
+
+# The Archimedian Spiral
 
 import { Spiral } from "../src/components/viz/Spiral/Spiral";
 
