--- a/blog/spiral.mdx
+++ b/blog/spiral.mdx
@@ -2,7 +2,7 @@
 title: "The Archimedean Spiral"
 date: "2022-11-23"
 slug: "spiral"
-tag: "A place to draw spirals"
+tag: "Build your own archimedean spiral"
 quote: "Every year we pass the pre-anniversary of our death, but we don't even know it, so we don't get presents."
 attribution: "Matt Spencer"
 citation: "Avenue 5"
