add player information

--- a/blog/nhl-player.mdx
+++ b/blog/nhl-player.mdx
@@ -8,9 +8,9 @@ attribution: "Jack Hughes"
 citation: ""
 ---
 
-import { Stats } from "../src/components/viz/Stats/Stats";
+import { PlayerCard } from "../src/components/viz/PlayerCard/PlayerCard";
 
 <main style={{ textAlign: "center" }}>
   # Visualizing Wins and Losses in the NHL
-  <Stats />
+  <PlayerCard />
 </main>
